syntax = "proto3";

message ProgramList{
  repeated Program programs = 1;
}

message Program {
  string gtin = 1;
  repeated OrgStatus org_status = 2;
}

message OrgStatus {
  string org_name = 1;
  string status = 2;
}

